2009-12-11  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (find-operation): New function for
	finding asdf operations independent of readtable
	case sensitivity (read Allegro Modern Mode).
	(operate-on-system): Accept symbols instead of strings for
	operation-name, and use the above function.

	* slime-asdf.el: Replace strings with operation names
	for `slime-oos' with symbols.

2009-12-11  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (*swank-debug-arglists*): Removed.
	(arglist-for-echo-area): Use DEBUG-ON-SWANK-ERROR instead.

2009-12-04  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (find-subform-with-arglist): Return
	 (values nil :not-available), not just NIL, when operator is
	`quote' or `function'.
	Fixes bug reported by Mark Harig.

2009-12-03  Tobias C. Rittweiler  <tcr@freebits.de>

	http://common-lisp.net/project/hyperdoc/

	* slime-hyperdoc.el, swank-hyperdoc.lisp: New contrib.

2009-12-03  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (arglist-available-p): New helper.
	(arglist-dispatch [eql 'declaim]): New.
	(arglist-dispatch [eql 'declare]): First try to lookup arglist of
	a typespec if it's a type-declaration, if not default to looking
	up arglist of declaration specifier.
	(arglist-for-type-declaration): Extracted out.
	(decoded-arglist-for-type-specifier): Make sure not to call
	TYPE-SPECIFIER-ARGLIST with an ARGLIST-DUMMY.

2009-12-03  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-asdf.el (slime-query-replace-regexp): Quote `from'
	argument because `tags-query-replace' actually uses
	`query-replace-regexp' internally.

	Reported by David O'Toole.

2009-12-01  Stas Boukarev  <stassats@gmail.com>

	* swank-asdf.lisp (asdf-system-files): Include the .asd file too.
	(asdf-module-files): Include non-cl files too.

2009-11-30  Helmut Eller  <heller@common-lisp.net>

	* slime-repl.el (slime-repl-mode-map): Don't copy
	slime-parent-map.  Instead ...